--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -91,6 +91,7 @@
 					"controlAggregation": "masterPages"
 				},
 				"page": {
+					"viewType": "JS",
 					"viewName": "Page",
 					"viewId": "page",
 					"viewLevel": 1,
