--- a/ui5.yaml
+++ b/ui5.yaml
@@ -3,10 +3,11 @@ metadata:
   name: openui5-basic-template-app
 type: application
 framework:
-  name: OpenUI5
-  version: "1.79.0"
+  name: SAPUI5
+  version: "1.79.2"
   libraries:
     - name: sap.m
+    - name: sap.ui.richtexteditor
     - name: sap.ui.core
     - name: sap.ui.layout
     - name: themelib_sap_fiori_3
