--- a/ui5.yaml
+++ b/ui5.yaml
@@ -1,4 +1,4 @@
-specVersion: '2.1'
+specVersion: '2.2'
 metadata:
   name: openui5-basic-template-app
 type: application
@@ -15,7 +15,7 @@ server:
   customMiddleware:
   - name: ui5-middleware-simpleproxy
     afterMiddleware: compression
-    mountPath: /api
+    mountPath: /db
     configuration:
       baseUri: "https://couchdb.feste-feiern-in-bielefeld.de"
       strictSSL: false
