--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     ]
   },
   "dependencies": {
+    "axios": "^0.21.0",
     "express": "^4.17.1",
     "express-http-proxy": "^1.6.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "mustache-express": "^1.3.0"
   }
 }
