--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     "express": "^4.17.1",
     "express-http-proxy": "^1.6.2",
     "morgan": "^1.10.0",
-    "mustache-express": "^1.3.0"
+    "mustache-express": "^1.3.0",
+    "pouchdb": "^7.2.2",
+    "pouchdb-adapter-memory": "^7.2.2",
+    "pouchdb-find": "^7.2.2"
   }
 }
