--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "axios": "^0.21.0",
     "express": "^4.17.1",
+    "express-handlebars": "^5.2.0",
     "express-http-proxy": "^1.6.2",
     "morgan": "^1.10.0",
     "mustache-express": "^1.3.0",
