--- a/config.json
+++ b/config.json
@@ -3,12 +3,15 @@
     "port": "8080"
   },
   "static": [
-    { "mountPath": "/admin",    "localPath": "/dist" },
-    { "mountPath": "/",         "localPath": "/public"},
+    { "mountPath": "/admin",    "localPath": "/webapp" },
+    { "mountPath": "/",         "localPath": "/public"}
+  ],
+  "uploads": [
     { "mountPath": "/uploads",  "localPath": "/uploads"}
   ],
   "proxy": [
-    { "mountPath": "/db", "url": "https://couchdb.feste-feiern-in-bielefeld.de" }
+    { "mountPath": "/db",              "url": "https://couchdb.feste-feiern-in-bielefeld.de" },
+    { "mountPath": "/admin/resources", "url": "https://sapui5.hana.ondemand.com/resources" }
   ],
   "pouchdb": {
     "sync": {
