--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "Launch via NPM",
             "request": "launch",
             "runtimeArgs": [
-                "run", "server"
+                "start"
             ],
             "runtimeExecutable": "npm",
             "skipFiles": [
