--- a/package.json
+++ b/package.json
@@ -4,14 +4,13 @@
   "description": "CMS Admin based on OpenUI5",
   "private": true,
   "scripts": {
-    "start": "ui5 serve",
+    "start": "node cmjs.js",
     "lint": "eslint webapp",
     "karma": "karma start",
     "karma-ci": "karma start karma-ci.conf.js",
     "watch": "npm run karma",
     "test": "npm run lint && rimraf coverage && npm run karma-ci",
-    "build": "rimraf dist && ui5 build --a",
-    "server": "node server.js"
+    "build": "rimraf dist && ui5 build --a"
   },
   "devDependencies": {
     "@ui5/cli": "^2.6.4",
