--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "express-handlebars": "^5.2.0",
     "express-http-proxy": "^1.6.2",
     "express-middleware-upload": "0.0.4",
+    "express-nedb-rest": "^1.2.6",
     "morgan": "^1.10.0",
     "mustache-express": "^1.3.0",
+    "nedb": "^1.8.0",
     "pouchdb": "^7.2.2",
     "pouchdb-adapter-memory": "^7.2.2",
     "pouchdb-find": "^7.2.2"
