--- a/cmjs/config.json
+++ b/cmjs/config.json
@@ -1,9 +1,7 @@
 {
   "projectPath": "./project",
-  "express": {
-    "port": "8080",
-    "log": "access.log"
-  },
+  "port": "8080",
+  "log": "access.log",
   "salt": "8465165481668489",
-  "devMode": true
+  "devMode": false
 }
