--- a/cmjs/config.json
+++ b/cmjs/config.json
@@ -3,5 +3,6 @@
   "port": "8080",
   "log": "access.log",
   "salt": "8465165481668489",
-  "devMode": false
+  "devMode": false,
+  "autocompactionInterval":600000
 }
