--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
     "lex-parser": "^0.1.4"
   },
   "dependencies": {
-    "cookie-parser": "^1.4.5",
-    "express": "^4.17.1",
-    "express-handlebars": "^5.2.0",
-    "express-http-proxy": "^1.6.2",
-    "express-middleware-upload": "0.0.4",
+    "cookie-parser": "^1.4.6",
+    "express": "^4.17.3",
+    "express-handlebars": "^5.3.5",
+    "express-http-proxy": "^1.6.3",
+    "express-middleware-upload": "^0.0.4",
     "express-nedb-rest": "^1.4.1",
     "fs-extra": "^9.1.0",
-    "helmet": "^4.4.1",
+    "helmet": "^4.6.0",
     "morgan": "^1.10.0",
     "nedb": "^1.8.0",
     "sharp": "^0.26.3"
