--- a/cmjs/admin/manifest.json
+++ b/cmjs/admin/manifest.json
@@ -41,8 +41,9 @@
 			"minUI5Version": "1.60.0",
 			"libs": {
 				"sap.ui.core": {},
+				"sap.ui.layout": {},
 				"sap.m": {},
-				"sap.ui.layout": {}
+				"sap.tnt": {}
 			}
 		},
 		"contentDensities": {
