--- a/ui5.yaml
+++ b/ui5.yaml
@@ -6,10 +6,13 @@ framework:
   name: OpenUI5
   version: "1.99.0"
   libraries:
-    - name: sap.m
-    - name: sap.tnt
     - name: sap.ui.core
     - name: sap.ui.layout
+    - name: sap.ui.support
+    - name: sap.ui.integration
+    - name: sap.ui.testrecorder
+    - name: sap.m
+    - name: sap.tnt
     - name: themelib_sap_fiori_3
 resources:
   configuration:
